put link to book in Syllabus

--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "### Textbook\n",
     "\n",
-    "_Problem Solving with Python 3.7 Edition_ by Peter D. Kazarinoff. Available on-line at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/) and hard copy on Amazon.com: [https://amazon.com/](https://amazon.com/)\n",
+    "_Problem Solving with Python 3.7 Edition_ by Peter D. Kazarinoff. Available on-line at [problemsolvingwithpython.com](https://problemsolvingwithpython.com/) and hard copy on Amazon.com: [https://www.amazon.com/dp/1693405415](https://www.amazon.com/dp/1693405415). Ensure you have the 3.7 Edition. Homework will be assigned out of the book.\n",
     "\n",
     "### Other course materials\n",
     "\n",
