converted syllabus to .tex and compiled to pdf

--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.tex
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.tex
@@ -418,7 +418,9 @@ Locations}\label{course-meeting-times-and-locations}}
 \emph{Problem Solving with Python 3.7 Edition} by Peter D. Kazarinoff.
 Available on-line at
 \href{https://problemsolvingwithpython.com/}{problemsolvingwithpython.com}
-and hard copy on Amazon.com: \url{https://amazon.com/}
+and hard copy on Amazon.com: \url{https://www.amazon.com/dp/1693405415}.
+Ensure you have the 3.7 Edition. Homework will be assigned out of the
+book.
 
 \hypertarget{other-course-materials}{%
 \subsubsection{Other course materials}\label{other-course-materials}}
