--- a/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "You can find the relevant .xlsx-file posted along with these lab instructions on D2L.  After completing the in-class example, save your script as a Jupyter notebook. Your work completing the in-class example does not need to be submitted for credit."
+    "You can find the relevant **_.xlsx-file_** posted along with these lab instructions on D2L.  After completing the in-class example, save your script as a Jupyter notebook. Your work completing the in-class example does not need to be submitted for credit."
    ]
   },
   {
@@ -58,9 +58,9 @@
     "\n",
     "The next step in the lab is to import the Excel file using Pandas and save the weather data to a NumPy array.\n",
     "\n",
-    "Import the weather data from the ```weather_data.xls``` file into a Panda's dataframe called ```df```. You can search the Pandas package documentation help section to see how to use the ```pd.read_excel()``` function and why we need the keyword argument ```header=None``` in this example.  \n",
+    "Import the weather data from the ```weather_data.xlsx``` file into a Panda's dataframe called ```df```. You can search the Pandas package documentation help section to see how to use the ```pd.read_excel()``` function and why we need the keyword argument ```header=None``` in this example.  \n",
     "\n",
-    "Note: the .xlsx-file must be in your current file path, and quotes need to surround the file name.\n",
+    "Note: the **_.xlsx-file_** must be in your current file path, and quotes need to surround the file name.\n",
     "\n",
     "The Jupyter notebook code cell below shows the steps to import the ```weather_data.xlsx``` file into a Pandas dataframe, and save the data in the variable ```df```."
    ]
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use Pandas methods to view the top of the dataframe with ```df.head()``` and ```df.tail()```. When first imported, the dataframe ```df``` contains a couple values equal to ```-99999```.  Running the command ```print(df.shape)``` will indicate the  dataframe ```df``` has dimensions of 12 rows x 31 columns.  Also check the value in row 1 (index 0), column 3 (index 2) in the dataframe is ```272``` by running the ```wdf.head()``` method. \n",
+    "You can use Pandas methods to view the top of the dataframe with ```df.head()``` and ```df.tail()```. When first imported, the dataframe ```df``` contains a couple values equal to ```-99999```.  Running the command ```print(df.shape)``` will indicate the  dataframe ```df``` has dimensions of 12 rows x 31 columns.  Also check the value in row 1 (index 0), column 3 (index 2) in the dataframe is ```272``` by running the ```df.head()``` method. \n",
     "\n",
     "The code cell below completes these steps."
    ]
@@ -434,33 +434,33 @@
        "</div>"
       ],
       "text/plain": [
-       "     0    1    2   3    4    5   6   7   8    9   ...    21  22   23   24  \\\n",
-       "0     0    0  272   0    0    0   0   9  26    1  ...     1  15  224    0   \n",
-       "1    61  103    0   2    0    0   0   2   0   68  ...     0   0    5    0   \n",
-       "2     2    0   17  27    0   10   0   0  30   25  ...    26   0    0    9   \n",
-       "3   260    1    0   0    0    1   3   0   5    0  ...     0   0    0    0   \n",
-       "4    47    0    0   0    5  115  49  81   0    0  ...     0   0    0    0   \n",
-       "5     0    0   30  42    0    0   0   0   0    0  ...     0   2    2  240   \n",
-       "6     0    0    0   0    0    0   0   7   0    0  ...     0   0    0   10   \n",
-       "7     0   45    0   0    0    0   0   0   5    0  ...     0   0  158   62   \n",
-       "8     0    0    0   0    0    0   0   0   0    0  ...    37   0    0    0   \n",
-       "9     0    0    0  14  156    0   0   0   0  110  ...     0   0    0    0   \n",
-       "10    1  163    5   0    0    0   0   0   0    0  ...     0   2    2   10   \n",
-       "11    0    0    0   0    0   45   0   0   0   15  ...    34   0    0    0   \n",
+       "     0    1    2   3    4    5   6   7   8    9   ...  21  22   23   24   25  \\\n",
+       "0     0    0  272   0    0    0   0   9  26    1  ...   1  15  224    0    0   \n",
+       "1    61  103    0   2    0    0   0   2   0   68  ...   0   0    5    0    0   \n",
+       "2     2    0   17  27    0   10   0   0  30   25  ...  26   0    0    9    6   \n",
+       "3   260    1    0   0    0    1   3   0   5    0  ...   0   0    0    0    9   \n",
+       "4    47    0    0   0    5  115  49  81   0    0  ...   0   0    0    0    0   \n",
+       "5     0    0   30  42    0    0   0   0   0    0  ...   0   2    2  240   16   \n",
+       "6     0    0    0   0    0    0   0   7   0    0  ...   0   0    0   10    0   \n",
+       "7     0   45    0   0    0    0   0   0   5    0  ...   0   0  158   62    1   \n",
+       "8     0    0    0   0    0    0   0   0   0    0  ...  37   0    0    0    0   \n",
+       "9     0    0    0  14  156    0   0   0   0  110  ...   0   0    0    0    0   \n",
+       "10    1  163    5   0    0    0   0   0   0    0  ...   0   2    2   10  255   \n",
+       "11    0    0    0   0    0   45   0   0   0   15  ...  34   0    0    0    0   \n",
        "\n",
-       "     25  26   27     28     29     30  \n",
-       "0     0   0    0      0     33     33  \n",
-       "1     0   0   62 -99999 -99999 -99999  \n",
-       "2     6  78    0      5      8      0  \n",
-       "3     9  35   13     86      0 -99999  \n",
-       "4     0   2    0      0      0      0  \n",
-       "5    16  35   14     14      8 -99999  \n",
-       "6     0   0    5      0      0      0  \n",
-       "7     1   0    0      0      0      0  \n",
-       "8     0   6  138     58     10 -99999  \n",
-       "9     0   0    0      0      0      1  \n",
-       "10  255   2    0      0      0 -99999  \n",
-       "11    0   0    0      0      0      0  \n",
+       "    26   27     28     29     30  \n",
+       "0    0    0      0     33     33  \n",
+       "1    0   62 -99999 -99999 -99999  \n",
+       "2   78    0      5      8      0  \n",
+       "3   35   13     86      0 -99999  \n",
+       "4    2    0      0      0      0  \n",
+       "5   35   14     14      8 -99999  \n",
+       "6    0    5      0      0      0  \n",
+       "7    0    0      0      0      0  \n",
+       "8    6  138     58     10 -99999  \n",
+       "9    0    0      0      0      1  \n",
+       "10   2    0      0      0 -99999  \n",
+       "11   0    0      0      0      0  \n",
        "\n",
        "[12 rows x 31 columns]"
       ]
@@ -529,7 +529,7 @@
     "\n",
     "The weather data is in hundredths of an inch. Multiply each value in the array by ```0.01``` so that the array contains rain fall in inches (not hundredths of an inch).\n",
     "\n",
-    "The code cell below shows how to convert the weather data from hundredths of an inch to inches. When the multiplication symbol ```*``` is used with a NumPy array, the multiplication is element-wise. This means each value in the array is multiplied by the scalar ``0.01```. "
+    "The code cell below shows how to convert the weather data from hundredths of an inch to inches. When the multiplication symbol ```*``` is used with a NumPy array, the multiplication is _element-wise_. This means each value in the array is multiplied by the scalar ```0.01```. "
    ]
   },
   {
@@ -647,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then use the boolean mask ```md>-1``` to index the array ```md```. All the locations in ```wd``` where the boolean mask is set to ```True``` are pull out. All the locations in ```wd``` where the boolean mask is ```False``` do not get pulled out. We put the results of the indexing operation back into the variable ```wd``` to be used later.\n",
+    "We then use the boolean mask ```md>-1``` to index the array ```md```. All the locations in ```wd``` where the boolean mask is set to ```True``` are pulled out. All the locations in ```wd``` where the boolean mask is ```False``` do not get pulled out. We put the results of the indexing operation back into the variable ```wd``` to be used later.\n",
     "\n",
     "The code cell below creates the boolean mask, indexes out values from ```wd``` based on the mask, and puts the results back into ```wd```, which as a result does not contain ```-9.9999``` in any location."
    ]
@@ -738,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
