added food resources statement to Syllabus

--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
@@ -187,6 +187,15 @@
     "\n",
     "[Student Rights and Responsibilities](http://www.pcc.edu/about/policy/student-rights/), Includes information on children on PCC Properties, Academic Integrity Policy, Policy on Student Conduct.\n",
     "     \n",
+    "#### Food Pantry and Emergency Funds\n",
+    "\n",
+    "If you face challenges affording food or housing, this will naturally affect your classwork. PCC wants you to be successful and offers some resources that may help:\n",
+    "\n",
+    " * Emergency Funds: [www.pcc.edu/enroll/paying-for-college/emergency-funds.html](https://www.pcc.edu/enroll/paying-for-college/emergency-funds.html)\n",
+    " \n",
+    " * Food Pantries [www.pcc.edu/student-leadership/services/free-resources](https://www.pcc.edu/student-leadership/services/free-resources)\n",
+    "\n",
+    "\n",
     "#### Additional Classroom Rules\n",
     "     \n",
     " * Use of cell phones and other personal electronic devices, unless otherwise stated, is not allowed during classes, labs, or exams.\n",
