--- a/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.tex
+++ b/ENGR114-Labs/Lab02-Sifting_Weather_Data/Lab02-Sifting_Weather_Data.tex
@@ -359,10 +359,10 @@ Data}\label{lab-02---sifting-weather-data}}
     \hypertarget{prelab}{%
 \subsection{Prelab}\label{prelab}}
 
-You can find the relevant .xlsx-file posted along with these lab
-instructions on D2L. After completing the in-class example, save your
-script as a Jupyter notebook. Your work completing the in-class example
-does not need to be submitted for credit.
+You can find the relevant \textbf{\emph{.xlsx-file}} posted along with
+these lab instructions on D2L. After completing the in-class example,
+save your script as a Jupyter notebook. Your work completing the
+in-class example does not need to be submitted for credit.
 
     \hypertarget{lab}{%
 \subsection{Lab}\label{lab}}
@@ -405,14 +405,14 @@ array}\label{save-the-weather-data-to-a-numpy-array}}
 The next step in the lab is to import the Excel file using Pandas and
 save the weather data to a NumPy array.
 
-Import the weather data from the \texttt{weather\_data.xls} file into a
+Import the weather data from the \texttt{weather\_data.xlsx} file into a
 Panda's dataframe called \texttt{df}. You can search the Pandas package
 documentation help section to see how to use the
 \texttt{pd.read\_excel()} function and why we need the keyword argument
 \texttt{header=None} in this example.
 
-Note: the .xlsx-file must be in your current file path, and quotes need
-to surround the file name.
+Note: the \textbf{\emph{.xlsx-file}} must be in your current file path,
+and quotes need to surround the file name.
 
 The Jupyter notebook code cell below shows the steps to import the
 \texttt{weather\_data.xlsx} file into a Pandas dataframe, and save the
@@ -429,7 +429,7 @@ dataframe \texttt{df} contains a couple values equal to \texttt{-99999}.
 Running the command \texttt{print(df.shape)} will indicate the dataframe
 \texttt{df} has dimensions of 12 rows x 31 columns. Also check the value
 in row 1 (index 0), column 3 (index 2) in the dataframe is \texttt{272}
-by running the \texttt{wdf.head()} method.
+by running the \texttt{df.head()} method.
 
 The code cell below completes these steps.
 
@@ -445,33 +445,33 @@ The code cell below completes these steps.
     \end{Verbatim}
 
 \begin{Verbatim}[commandchars=\\\{\}]
-{\color{outcolor}Out[{\color{outcolor}3}]:}      0    1    2   3    4    5   6   7   8    9   {\ldots}    21  22   23   24  \textbackslash{}
-        0     0    0  272   0    0    0   0   9  26    1  {\ldots}     1  15  224    0   
-        1    61  103    0   2    0    0   0   2   0   68  {\ldots}     0   0    5    0   
-        2     2    0   17  27    0   10   0   0  30   25  {\ldots}    26   0    0    9   
-        3   260    1    0   0    0    1   3   0   5    0  {\ldots}     0   0    0    0   
-        4    47    0    0   0    5  115  49  81   0    0  {\ldots}     0   0    0    0   
-        5     0    0   30  42    0    0   0   0   0    0  {\ldots}     0   2    2  240   
-        6     0    0    0   0    0    0   0   7   0    0  {\ldots}     0   0    0   10   
-        7     0   45    0   0    0    0   0   0   5    0  {\ldots}     0   0  158   62   
-        8     0    0    0   0    0    0   0   0   0    0  {\ldots}    37   0    0    0   
-        9     0    0    0  14  156    0   0   0   0  110  {\ldots}     0   0    0    0   
-        10    1  163    5   0    0    0   0   0   0    0  {\ldots}     0   2    2   10   
-        11    0    0    0   0    0   45   0   0   0   15  {\ldots}    34   0    0    0   
+{\color{outcolor}Out[{\color{outcolor}3}]:}      0    1    2   3    4    5   6   7   8    9   {\ldots}  21  22   23   24   25  \textbackslash{}
+        0     0    0  272   0    0    0   0   9  26    1  {\ldots}   1  15  224    0    0   
+        1    61  103    0   2    0    0   0   2   0   68  {\ldots}   0   0    5    0    0   
+        2     2    0   17  27    0   10   0   0  30   25  {\ldots}  26   0    0    9    6   
+        3   260    1    0   0    0    1   3   0   5    0  {\ldots}   0   0    0    0    9   
+        4    47    0    0   0    5  115  49  81   0    0  {\ldots}   0   0    0    0    0   
+        5     0    0   30  42    0    0   0   0   0    0  {\ldots}   0   2    2  240   16   
+        6     0    0    0   0    0    0   0   7   0    0  {\ldots}   0   0    0   10    0   
+        7     0   45    0   0    0    0   0   0   5    0  {\ldots}   0   0  158   62    1   
+        8     0    0    0   0    0    0   0   0   0    0  {\ldots}  37   0    0    0    0   
+        9     0    0    0  14  156    0   0   0   0  110  {\ldots}   0   0    0    0    0   
+        10    1  163    5   0    0    0   0   0   0    0  {\ldots}   0   2    2   10  255   
+        11    0    0    0   0    0   45   0   0   0   15  {\ldots}  34   0    0    0    0   
         
-             25  26   27     28     29     30  
-        0     0   0    0      0     33     33  
-        1     0   0   62 -99999 -99999 -99999  
-        2     6  78    0      5      8      0  
-        3     9  35   13     86      0 -99999  
-        4     0   2    0      0      0      0  
-        5    16  35   14     14      8 -99999  
-        6     0   0    5      0      0      0  
-        7     1   0    0      0      0      0  
-        8     0   6  138     58     10 -99999  
-        9     0   0    0      0      0      1  
-        10  255   2    0      0      0 -99999  
-        11    0   0    0      0      0      0  
+            26   27     28     29     30  
+        0    0    0      0     33     33  
+        1    0   62 -99999 -99999 -99999  
+        2   78    0      5      8      0  
+        3   35   13     86      0 -99999  
+        4    2    0      0      0      0  
+        5   35   14     14      8 -99999  
+        6    0    5      0      0      0  
+        7    0    0      0      0      0  
+        8    6  138     58     10 -99999  
+        9    0    0      0      0      1  
+        10   2    0      0      0 -99999  
+        11   0    0      0      0      0  
         
         [12 rows x 31 columns]
 \end{Verbatim}
@@ -517,8 +517,8 @@ array by \texttt{0.01} so that the array contains rain fall in inches
 The code cell below shows how to convert the weather data from
 hundredths of an inch to inches. When the multiplication symbol
 \texttt{*} is used with a NumPy array, the multiplication is
-element-wise. This means each value in the array is multiplied by the
-scalar ``0.01```.
+\emph{element-wise}. This means each value in the array is multiplied by
+the scalar \texttt{0.01}.
 
     \begin{Verbatim}[commandchars=\\\{\}]
 {\color{incolor}In [{\color{incolor}6}]:} \PY{n}{wd} \PY{o}{=} \PY{n}{wd}\PY{o}{*}\PY{l+m+mf}{0.01}
@@ -616,7 +616,7 @@ location as the \texttt{-9.9999} values in \texttt{md}.
             
     We then use the boolean mask \texttt{md\textgreater{}-1} to index the
 array \texttt{md}. All the locations in \texttt{wd} where the boolean
-mask is set to \texttt{True} are pull out. All the locations in
+mask is set to \texttt{True} are pulled out. All the locations in
 \texttt{wd} where the boolean mask is \texttt{False} do not get pulled
 out. We put the results of the indexing operation back into the variable
 \texttt{wd} to be used later.
