minor edits to lab 1 circuit python

--- a/ENGR114-Labs/Lab01-Circuit-Python/Lab01-Circuit-Python.ipynb
+++ b/ENGR114-Labs/Lab01-Circuit-Python/Lab01-Circuit-Python.ipynb
@@ -76,7 +76,7 @@
     "\n",
     "Open the USB device (like opening a thumb drive) and see the contents. Note that the file **_code.py_** is present. We will control the Circuit Playground Express by modifying the **_code.py_** file.\n",
     "\n",
-    "Open Visual Studio Code using the Windows Start Menu. In Visual Studio Code, select File --> Open Folder and open the USB device. \n",
+    "Open Visual Studio Code using the Windows Start Menu. In Visual Studio Code, select File --> Open Folder and open the CIRCUITPY USB device.\n",
     "\n",
     "You should see the file **_code.py_** in the left-hand file browser of Visual Studio Code. Double click **_code.py_** to open it.\n",
     "\n",
