worked on lab 2 data types renamed a folder and lab to keep dash and underscore format consistant

--- a/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
+++ b/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
@@ -25,9 +25,9 @@
     " * tuple\n",
     " * dictionary\n",
     " \n",
-    "Pay particular attention to the sections on _String Indexing_ and _String Slicing_. Complete the pre-lab examples using string indexing and string slicing.\n",
+    "Pay particular attention to the sections on _String Indexing_ and _String Slicing_. Complete the pre-lab examples with your instructor using string indexing and string slicing.\n",
     "\n",
-    "Read the blog post: [https://pythonforundergradengineers.com/unicode-characters-in-python.html](https://pythonforundergradengineers.com/unicode-characters-in-python.html). You will utilize Greek symbols in this lab"
+    "Read the blog post: [https://pythonforundergradengineers.com/unicode-characters-in-python.html](https://pythonforundergradengineers.com/unicode-characters-in-python.html). You will utilize Greek symbols in this lab."
    ]
   },
   {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
     " 1. Print your name and add a comment that it's your name.\n",
     " 2. Print \\'\\\\/\\\\/\\\\/\\\\/\\\\/\\\\/\\'\n",
     " 3. Print \"Ω 13\"\n",
-    " 4. Print the first three lower-case letters of the Greek alphabet.\n"
+    " 4. Print the first three lower-case letters of the Greek alphabet. See [https://pythonforundergradengineers.com/unicode-characters-in-python.html](https://pythonforundergradengineers.com/unicode-characters-in-python.html) for a list of character codes.\n"
    ]
   },
   {
@@ -97,12 +97,12 @@
    "source": [
     "### Integers, Floats and Complex Numbers\n",
     "\n",
-    "Python has three data types for numbers: _integers_, _floats_, and _complex numbers_. The code below uses these three data types."
+    "Python has three numeric data types: _integers_, _floats_, and _complex numbers_. The code below uses these three number data types."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -167,8 +167,8 @@
     "#### Exercises\n",
     "\n",
     " 1. Print 2.3 billion\n",
-    " 2. Search for the numpy function for cube root, and print the cube root of 8.\n",
-    " 3. Print 0.01 microns (include the SI unit for microns)\n",
+    " 2. Search for the NumPy function for cube root, and print the cube root of ```8```.\n",
+    " 3. Print 0.01 microns (Include the SI unit for microns. Remember your greek symbols from the last section?)\n",
     " "
    ]
   },
@@ -180,12 +180,12 @@
     "\n",
     "In computer programming, a _boolean_ is a data type that can only be two values: ```True``` or ```False```. Combining boolean variables is called boolean logic or boolean arithmetic\n",
     "\n",
-    "The code below demonstrates boolean variables"
+    "The code below demonstrates boolean variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -217,33 +217,154 @@
    "source": [
     "#### Exercises\n",
     "\n",
-    " 1. Create a variable, x, and set to true.\n",
-    " 2. Create a variable y, and set to false.\n",
-    " 3. Print x AND y. (Use the logic AND operator)\n",
-    " 4. Print x or y. (Use the logic OR operator)"
+    " 1. Create a variable, ```x```, and set to true.\n",
+    " 2. Create a variable ```y```, and set to false.\n",
+    " 3. Print ```x``` AND ```y```. (Use the logic AND operator)\n",
+    " 4. Print ```x``` or ```y```. (Use the logic OR operator)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Lists\n",
+    "### Lists\n",
     "\n",
-    "In Python, a _list_ is a container data type which contains objects in a specific order. Lists are an example of a _mutable data structure_ which means that objects in a Python list can be added, removed, and modified."
+    "In Python, a _list_ is a container data type which contains objects in a specific order. Lists are an example of a _mutable data structure_ which means that objects in a Python list can be added, removed, and modified.\n",
+    "\n",
+    "Lists can be _indexed_ and _sliced_ using square brackets ```[ ]```.  The number or numbers in the square bracket determines which elements of a list are returned. \n",
+    "\n",
+    "A useful method to use on lists is ```.sort()```. Calling ```lst.sort()``` on list ```lst``` sorts ```lst``` alphabetically place. \n",
+    "\n",
+    "A useful function to use on lists is ```len()```. ```len(lst)``` returns the number of elements in list ```lst```.\n",
+    "\n",
+    "The code below demonstrates operations on lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My coffee is hot\n",
+      "My water is cold\n",
+      "My milk is warm\n",
+      "drinks in alphabetical order ['coffee', 'milk', 'water']\n",
+      "\n",
+      "Week days: ['Mon', 'Tues', 'Wed', 'Thurs', 'Fri']\n",
+      "Week ends: ['Sat', 'Sun']\n",
+      "We have class: ['Tues', 'Thurs']\n",
+      "There are 7 days in a week\n"
+     ]
+    }
+   ],
+   "source": [
+    "lst = ['coffee','water','milk']\n",
+    "print('My ' + lst[0] + ' is hot')  # pull the first element, index 0, out of the list\n",
+    "print('My ' + lst[1] + ' is cold') # pull the second element, index 1, out of the list\n",
+    "print('My ' + lst[2] + ' is warm') # pull the third element, index 2, out of the list\n",
+    "lst.sort()                         # can also use sorted_lst = sorted(lst)\n",
+    "print('drinks in alphabetical order', lst)\n",
+    "print()\n",
+    "days = ['Mon','Tues','Wed','Thurs','Fri','Sat','Sun']\n",
+    "print('Week days:', days[0:5])    # pull out index 0 to 4\n",
+    "print('Week ends:', days[5:7])    # pull out index 5 to 6\n",
+    "print('We have class:', days[1:4:2]) #pull out index 1 to 3 counting by 2's\n",
+    "print('There are',len(days),'days in a week') # calculate list length"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Dictionaries\n",
+    "#### Exercises\n",
+    "\n",
+    " 1. Create a Python list that contains all of the months of the year. Print out the winter months. Print out the summer months. Print out all the months that have 30 days.\n",
+    " 2. Ensure the file ```cat_in_hat_words.txt``` is in the same directory (folder) as your Jupyter notebook. Copy the code below exactly. These lines of code print out all the unique words in the book _Cat in the Hat_ by Dr. Suess and save the words to a Python list called ```words```.\n",
+    "\n",
+    "```python\n",
+    "with open('cat_in_hat_words.txt', 'r') as f:\n",
+    "    words = [line.strip() for line in f.readlines()]\n",
+    "print(words)\n",
+    "```\n",
+    "\n",
+    " * Print out the number of unique words in _Cat in the Hat_\n",
+    " * Use indexing and the list ```words``` to print out the first two lines of _Cat in the Hat_:\n",
+    " \n",
+    "```text\n",
+    "The sun did not shine.\n",
+    "It was too wet to play\n",
+    "``` \n",
+    "\n",
+    "Complete this this task with indexing, not by writing the the strings from scratch. Hint: Open the file ```cat_in_hat_words.txt``` from the Jupyter notebook file browser. The text file will be shown with line numbers.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionaries\n",
     "\n",
     "A dictionary in Python is a container data type that stores key:value pairs in arbitrary order. Dictionary values are accessed using the keys in the dictionary. This compares to lists, where the values in a list are accessed by their location or index in the list\n",
     "\n",
+    "The code below demonstrates operations on dictionaries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mm': 'milimeters', 'm': 'meters', 'km': 'kilometers'}\n",
+      "this is a <class 'dict'>\n",
+      "These are the long names:\n",
+      "milimeters\n",
+      "meters\n",
+      "kilometers\n",
+      "The secret key is\n",
+      "{'e': 'f', 'n': 'o', 'g': 'h', 'i': 'j', 'r': 's'}\n",
+      "fohjoffsjoh\n"
+     ]
+    }
+   ],
+   "source": [
+    "units = {'mm':'milimeters','m':'meters','km':'kilometers'}\n",
+    "print(units)\n",
+    "print('this is a',type(units))\n",
+    "print('These are the long names:')\n",
+    "print(units['mm'])\n",
+    "print(units['m'])\n",
+    "print(units['km'])\n",
+    "d = {'e':'f', 'n':'m', 'g':'h', 'i':'j', 'n':'o', 'r':'s'}\n",
+    "print('The secret key is')\n",
+    "print(d)\n",
+    "secret_message = d['e']+d['n']+d['g']+d['i']+d['n']+d['e']+d['e']+d['r']+d['i']+d['n']+d['g']\n",
+    "print(secret_message)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Exercises\n",
     "\n",
     " 1. Create a Python dictionary of the courses you are taking this quarter. Use the course number (like ENGR114) as the keys and the course title (like Engineering Programming) as the values. Print out your course schedule this quarter (the course titles) using the keys in the dictionary.\n",
-    " 2. Create a Python dictionary that maps "
+    " 2. Create a Python dictionary that maps greek letter names (like ```alpha```) to unicode characters (like ```\\u03a9```). Use your dictionary to print the equations below in greek letters.\n",
+    " \n",
+    " $$ sigma = Delta \\ epsilon / Delta \\ apha $$\n",
+    " \n",
+    " $$ \\sigma = \\Delta \\ \\epsilon / \\Delta \\ \\alpha $$\n",
+    " \n",
+    " $$ tau = gamma + (epsilon + mu \\ Beta) $$\n",
+    " \n",
+    " $$ \\tau = \\gamma + (\\epsilon + \\mu \\ \\beta) $$"
    ]
   },
   {
@@ -298,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
