Edits to Lab 1 Circuit Python

--- a/ENGR114-Labs/Lab01-Circuit_Python/Lab01-Circuit-Python.ipynb
+++ b/ENGR114-Labs/Lab01-Circuit_Python/Lab01-Circuit-Python.ipynb
@@ -533,13 +533,23 @@
     "\n",
     " * It is really hard to break a Circuit Playground Express. As long as you don't throw the device across the room, or hit it with a hammer, the very worst thing that can happen is that you have to unplug the Circuit Playground Express and restart your computer. Play around with the code and try new things. You won't break anything.\n",
     " \n",
-    " * Remember that Python is case sensitive.  Capital ```A``` and lowercase ```a``` are different in Python. Pay attention to the words ```True``` and ```true```. Python treats these two keywords differently.\n",
+    " * Remember **indentation is important in Python!** If the indentation of Python code is not entered correctly, the code will not run as expected.\n",
     " \n",
-    " * Remember that indentation is import in Python. If the indentation of Python code is not entered correctly, the code will not run as expected.\n",
+    " * Python is case sensitive.  Capital ```A``` and lowercase ```a``` are different in Python. Pay attention to the words ```True``` and ```true```. Python treats these two keywords differently.\n",
     " \n",
-    " * Remember to use colons (```:```) where noted. It is easy to forget colons at the end of certain code lines.\n",
+    " * Use colons (```:```) where noted. It is easy to forget colons at the end of certain code lines.\n",
     " \n",
-    " * Generally, spaces in lines of Python code don't make a difference. But be careful with parenthesis ```( )``` and square brackets ```[ ]```."
+    " * Generally, spaces within lines of Python code don't make a difference. But be careful with parenthesis ```( )``` and square brackets ```[ ]```.\n",
+    " \n",
+    " * You can comment out blocks of code by surrounding the code with triple quotes ```\"\"\"       \"\"\"````.\n",
+    " * If the Circuit Playground Express is unresponsive, try:\n",
+    "   * Close Visual Studio Code\n",
+    "   * Eject the Circuit Playground Express in Windows like you would eject a thumb drive\n",
+    "   * Unplug the Circuit Playground Express\n",
+    "   * Plug the Circuit Playground Express back in\n",
+    "   * Re-open Visual Studio Code\n",
+    "   * Delete the ```code.py``` file\n",
+    "   * Create a new ```code.py``` file"
    ]
   },
   {
@@ -548,7 +558,7 @@
    "source": [
     "## Deliverable\n",
     "\n",
-    "Hand in a hard copy of your lab by the end of the lab period to your instructor. Make sure you have filled out the **Try something on your own** section and the **self-reflection questions**. Make sure your lab has your name on it. **Students who do not put their name on their papers will not receive credit for the lab.**"
+    "Answer the **Try something on your own** section and the **self-reflection questions** in a Word document or with Google Docs. Include the questions with your answers. Save as a ```.pdf``` and upload to D2L."
    ]
   },
   {
@@ -556,6 +566,13 @@
    "metadata": {},
    "source": [
     "#### _By P. Kazarinoff, Portland Community College, 2019_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Shared under a Creative Commons [_Attribution-ShareAlike 4.0 International_](https://creativecommons.org/licenses/by-sa/4.0/) License"
    ]
   }
  ],
@@ -575,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
