edits to lab2 data types

--- a/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
+++ b/ENGR114-Labs/Lab02-Data_Types/Lab02-Data_Types.ipynb
@@ -25,7 +25,7 @@
     " * tuple\n",
     " * dictionary\n",
     " \n",
-    "Pay particular attention to the sections on _String Indexing_ and _String Slicing_. Complete the pre-lab examples with your instructor using string indexing and string slicing.\n",
+    "Pay particular attention to the sections on _Indexing Lists_ and _Slicing Lists_. Complete the pre-lab examples with your instructor using list indexing and list slicing.\n",
     "\n",
     "Read the blog post: [https://pythonforundergradengineers.com/unicode-characters-in-python.html](https://pythonforundergradengineers.com/unicode-characters-in-python.html). You will utilize Greek symbols in this lab."
    ]
@@ -229,7 +229,7 @@
    "source": [
     "### Lists\n",
     "\n",
-    "In Python, a _list_ is a container data type which contains objects in a specific order. Lists are an example of a _mutable data structure_ which means that objects in a Python list can be added, removed, and modified.\n",
+    "In Python, a _list_ is a container data type which stores objects in a specific order. Lists are an example of a _mutable data structure_ which means that objects in a Python list can be added, removed, and modified.\n",
     "\n",
     "Lists can be _indexed_ and _sliced_ using square brackets ```[ ]```.  The number or numbers in the square bracket determines which elements of a list are returned. \n",
     "\n",
@@ -296,7 +296,7 @@
     " \n",
     "```text\n",
     "The sun did not shine.\n",
-    "It was too wet to play\n",
+    "It was too wet to play.\n",
     "``` \n",
     "\n",
     "Complete this this task with indexing, not by writing the the strings from scratch. Hint: Open the file ```cat_in_hat_words.txt``` from the Jupyter notebook file browser. The text file will be shown with line numbers.\n"
@@ -308,14 +308,14 @@
    "source": [
     "### Dictionaries\n",
     "\n",
-    "A dictionary in Python is a container data type that stores key:value pairs in arbitrary order. Dictionary values are accessed using the keys in the dictionary. This compares to lists, where the values in a list are accessed by their location or index in the list\n",
+    "A dictionary in Python is a container data type that stores key:value pairs in arbitrary order. The keys in a Python dictionary must be unique. Dictionary values are accessed using the keys in the dictionary. This compares to lists, where the values in a list are accessed by their location or index in the list\n",
     "\n",
     "The code below demonstrates operations on dictionaries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
    "source": [
     "## Deliverable\n",
     "\n",
-    "Upload a copy of your **_Lab2.ipynb_** to D2L by the end of the lab period. Ensure you run all of the code cells in the notebook and your code runs error free."
+    "Upload a copy of your **_lab2.ipynb_** to D2L by the end of the lab period. Ensure you run all of the code cells in the notebook and your code runs error free."
    ]
   },
   {
@@ -419,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
