compilied lab 02 Data Types and lab 03 Weather data to Latex and cleaned up folders

--- a/ENGR114-Labs/Lab03-Sifting_Weather_Data/Lab03-Sifting_Weather_Data.ipynb
+++ b/ENGR114-Labs/Lab03-Sifting_Weather_Data/Lab03-Sifting_Weather_Data.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Prelab\n",
     "\n",
-    "You can find the relevant **_.xlsx-file_** posted along with these lab instructions on D2L.  After completing the in-class example, save your script as a Jupyter notebook. Your work completing the in-class example does not need to be submitted for credit."
+    "You can find the relevant **_.xlsx-file_** posted along with these lab instructions on D2L.  Complete the in-class example, save your script as a Jupyter notebook. Your work completing the in-class example does not need to be submitted for credit."
    ]
   },
   {
@@ -33,7 +33,7 @@
    "source": [
     "### Import External Packages\n",
     "\n",
-    "The first step in the lab is to add a header to your Jupyter Notebook that includes the lab number and name, your name, the course, quarter and date. \n",
+    "The first step in the lab is to add a header to your Jupyter notebook that includes the lab number and name, your name, the course, quarter and date. \n",
     "\n",
     "Below the header cell, you need to import **NumPy** and **Pandas**. NumPy and Pandas are two external packages that you will use in the lab. The standard alias ```np``` and ```pd``` should be used for NumPy and Pandas respectively.\n",
     "\n",
@@ -62,7 +62,7 @@
     "\n",
     "Note: the **_.xlsx-file_** must be in your current file path, and quotes need to surround the file name.\n",
     "\n",
-    "The Jupyter notebook code cell below shows the steps to import the ```weather_data.xlsx``` file into a Pandas dataframe, and save the data in the variable ```df```."
+    "The Jupyter notebook code cell below shows a line of Python code that imports the ```weather_data.xlsx``` file into a Pandas dataframe, and save the data in the variable ```df```."
    ]
   },
   {
@@ -78,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use Pandas methods to view the top of the dataframe with ```df.head()``` and ```df.tail()```. When first imported, the dataframe ```df``` contains a couple values equal to ```-99999```.  Running the command ```print(df.shape)``` will indicate the  dataframe ```df``` has dimensions of 12 rows x 31 columns.  Also check the value in row 1 (index 0), column 3 (index 2) in the dataframe is ```272``` by running the ```df.head()``` method. \n",
+    "You can use Pandas methods to view the top of the dataframe with ```df.head()``` and ```df.tail()```. When first imported, the dataframe ```df``` contains a couple values equal to ```-99999```.  Running the command ```print(df.shape)``` should indicate the  dataframe ```df``` has dimensions of 12 rows x 31 columns.  Also check the value in row 1 (index 0), column 3 (index 2) in the dataframe is ```272``` by running the ```df.head()``` method. \n",
     "\n",
     "The code cell below completes these steps."
    ]
@@ -529,7 +529,7 @@
     "\n",
     "The weather data is in hundredths of an inch. Multiply each value in the array by ```0.01``` so that the array contains rain fall in inches (not hundredths of an inch).\n",
     "\n",
-    "The code cell below shows how to convert the weather data from hundredths of an inch to inches. When the multiplication symbol ```*``` is used with a NumPy array, the multiplication is _element-wise_. This means each value in the array is multiplied by the scalar ```0.01```. "
+    "The code cell below shows how to convert the weather data from hundredths of an inch to inches. When the multiplication symbol ```*``` is used on a NumPy array, the multiplication is _element-wise_. This means each value in the array is multiplied by the scalar ```0.01```. "
    ]
   },
   {
@@ -549,11 +549,11 @@
     " \n",
     "Define a variable called ```m``` and set it equal to ```1``` for now (Month ```1``` is February, remember Python counting starts at 0).  ```m``` represents the month for which we will compute statistics.  Later, you will change ```m``` to other values.  ```0``` means January, ```1``` means February, and so on.\n",
     "\n",
-    "Use the value in ```m``` to extract that month's data from your ```wd``` array. Store these values in an array called ```md``` (for month data).  Since February has 28 days, you will see positive numbers, zeros and ```NaN``` present in the array.\n",
+    "Use the value in ```m``` to extract that month's data from your ```wd``` array. Store these values in an array called ```md``` (for month data).  Since February has 28 days, you will see positive numbers, zeros and ```-9.9999e+02``` present in the array.\n",
     "\n",
     "For example, according to our data, the rainfall for the first 3 days in February are ```0.61``` inches, ```1.03``` inches, and ```0``` inches.\n",
     "\n",
-    "The Jupyter notebook cell which shows this operation is below. Note how indexing is used to pull out all of the values from one row. The general syntax for indexing a NumPy array is ```array[row,col]```. If we use ```wd[1,:]```, this means ```row=1```, ```col=all``` (row one, all columns). Note the values ```-9.9999``` present in the array ```md```."
+    "The Jupyter notebook code cell below demonstrates this operation. Note how indexing is used to pull out all of the values from one row. The general syntax for indexing a NumPy array is ```array[row,col]```. If we use ```wd[1,:]```, this means ```row=1```, ```col=all``` (row one, all columns). Note the values ```-9.9999``` present in the array ```md```."
    ]
   },
   {
@@ -584,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step is to remove all of the ```-9.9999``` values from the ```md``` array. If we find the average of the values in ```md``` now, which corresponds to the average rainfall in February, the value that's returned doesn't make sense. There is no way the rain fall could be negative. \n",
+    "The next step is to remove all of the ```-9.9999``` values from the ```md``` array. If we find the average of the values in ```md``` now, which corresponds to the average rainfall in February, the value that's returned doesn't make sense. There is no way the rain fall could be negative!\n",
     "\n",
     "The code cell below shows how to find the average of the values in the array ```md```. Note that ```-9.9999``` values are present in the array."
    ]
@@ -647,7 +647,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then use the boolean mask ```md>-1``` to index the array ```md```. All the locations in ```wd``` where the boolean mask is set to ```True``` are pulled out. All the locations in ```wd``` where the boolean mask is ```False``` do not get pulled out. We put the results of the indexing operation back into the variable ```wd``` to be used later.\n",
+    "Next, use the boolean mask ```md>-1``` to index the array ```md```. All the locations in ```wd``` where the boolean mask is set to ```True``` are pulled out. All the locations in ```wd``` where the boolean mask is ```False``` do not get pulled out. Put the results of the indexing operation back into the variable ```wd``` to be used later.\n",
     "\n",
     "The code cell below creates the boolean mask, indexes out values from ```wd``` based on the mask, and puts the results back into ```wd```, which as a result does not contain ```-9.9999``` in any location."
    ]
@@ -698,9 +698,9 @@
    "source": [
     "Test all of your values for the month of February manually to make sure they are correct.\n",
     "\n",
-    "Then run your script for the January data (```m=0```) and check the results against manual calculations for that month.\n",
+    "Then run your script for the January data (```m=0```) and check the results against manual calculations for January.\n",
     "\n",
-    "You may wish to test your script against other month's data.  When you are convinced your results and variable names are correct, set ```m=1``` and restart the Jupyter notebook Kernel and clear all output. Run each cell one last time and ensure the script is error free.\n",
+    "You may wish to test your script against other month's data.  When you are convinced your results and variable names are correct, set ```m=1``` and restart the Jupyter notebook Kernel and clear all output. Run each cell one last time and ensure the script runs error free.\n",
     "\n",
     "For your own records, save your ```lab2.ipynb``` file and your ```weather_data.xlsx``` file to the same directory.  You do not need to submit your ```weather_data.xlsx``` file because your instructor has their own copy to test your script."
    ]
@@ -711,7 +711,7 @@
    "source": [
     "## Deliverable\n",
     "\n",
-    "One .ipynb-file with all cells run. The .ipynb-file should run without errors. Uploaded the .ipynb file to D2L by the end of the lab period."
+    "One ```.ipynb```-file with all cells run. The ```.ipynb```-file should run without errors. Uploaded the .```.ipynb```-file to D2L by the end of the lab period."
    ]
   },
   {
